projeto formulario - carregamentos de dados e inclusão

--- a/7_REQUISICOES_HTTP_REACT/projeto/index.html
+++ b/7_REQUISICOES_HTTP_REACT/projeto/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/322503.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/icons/322503.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto Verbos HTTP</title>
   </head>
